--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
+		<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "76c9c430336242aa89b7d8289d1de8d8"}'></script><!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
