--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
-		<script async defer data-domain="wcastand.dev" src="https://analytics.wcastand.dev/js/plausible.js"></script>
+		<script async defer data-domain="wcastand.dev" src="http://178.62.41.160:8000/js/plausible.js"></script>
 	</body>
 </html>
